--- a/src/router.css
+++ b/src/router.css
@@ -1,27 +1,30 @@
 .container {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-  }
-  .left-nav {
-    float: left;
-    width: 200px;
-    height: 100%;
-    border-right: 1px solid #ededed;
-    text-align: center;
-  }
-  .right-content {
-    flex: 1;
-    padding: 1em;
-    color: #fff;
-  }
-  .title {
-    font-size: 20px;
-    line-height: 2em;
-  }
-  
-  .nav-list-item {
-    line-height: 2.5em;
-    border-bottom: 1px solid #ededed;
-  }
-  
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.left-nav {
+  float: left;
+  width: 200px;
+  height: 100%;
+  border-right: 1px solid #f7ee75;
+  text-align: center;
+}
+.right-content {
+  flex: 1;
+  padding: 1em;
+  color: rgb(7, 7, 7);
+}
+.title {
+  font-size: 20px;
+  line-height: 2em;
+  background-color: aquamarine
+}
+
+.nav-list-item {
+  line-height: 2.5em;
+  border-bottom: 1px solid #ededed;
+}
+.but{
+    background-color: antiquewhite
+}
