--- a/src/routes/OrderPage.css
+++ b/src/routes/OrderPage.css
@@ -1,3 +1,12 @@
+/* 搜索 */
+.search{
+  padding-right: 0%;
+
+margin-left: 80%; 
+  
+  
+  
+}
 .order {
     border-radius: 5px;
     padding: 1em;
